--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "outFile": "bin/e-digitBeats.js",
+        "outFile": "bin/e-digitBeats/e-digitBeats.js",
         "declaration": true
     },
     "include": [
